generator client {
  provider        = "prisma-client-js"
  previewFeatures = ["relationJoins"]
  binaryTargets   = ["native", "debian-openssl-3.0.x"]
}

generator nestgraphql {
  provider   = "node node_modules/prisma-nestjs-graphql"
  output     = "../src/lib/graphql/prisma-client"
  reExport   = None
  emitSingle = true
}

generator dbml {
  provider = "prisma-dbml-generator"
  output   = "../prisma/dbml"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id       String  @id @default(uuid())
  email    String  @unique
  password String?
  name     String

  role Role

  authUserProviders AuthUserProvider[]

  transactions          Transaction[]
  recurringTransactions RecurringTransaction[]

  institutionLinks InstitutionLink[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model Institution {
  id      String            @id @default(uuid())
  code    String
  name    String
  logoUrl String?
  color   String?
  types   InstitutionType[]

  institutionLinks InstitutionLink[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model InstitutionLink {
  id String @id @default(uuid())

  institution   Institution @relation(fields: [institutionId], references: [id], onDelete: Cascade)
  institutionId String

  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)
  userId String

  account     Account?
  cards       Card[]
  investments Investment[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@unique([institutionId, userId])
}

model Account {
  id             String   @id @default(uuid())
  name           String
  initialBalance Decimal  @default(0)
  startDate      DateTime
  description    String?
  isActive       Boolean  @default(true)

  institutionLink   InstitutionLink @relation(fields: [institutionLinkId], references: [id], onDelete: Cascade)
  institutionLinkId String          @unique

  sourceTransactions  Transaction[] @relation("SourceAccount")
  destinyTransactions Transaction[] @relation("DestinyAccount")

  sourceRecurringTransactions  RecurringTransaction[] @relation("RecurringSource")
  destinyRecurringTransactions RecurringTransaction[] @relation("RecurringDestiny")

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model Card {
  id String @id @default(uuid())

  name              String
  lastFourDigits    String?
  billingCycleDay   Int
  billingPaymentDay Int
  type              CardType
  defaultLimit      Decimal

  institutionLink   InstitutionLink @relation(fields: [institutionLinkId], references: [id], onDelete: Cascade)
  institutionLinkId String

  billings CardBilling[]

  sourceTransactions Transaction[] @relation("SourceCard")

  sourceRecurringTransactions RecurringTransaction[] @relation("RecurringSourceCard")

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model CardBilling {
  id String @id @default(uuid())

  periodStart DateTime
  periodEnd   DateTime?
  paymentDate DateTime?
  limit       Decimal

  status CardBillingStatus

  card   Card   @relation(fields: [cardId], references: [id], onDelete: Cascade)
  cardId String

  paymentTransaction   Transaction? @relation(fields: [paymentTransactionId], references: [id], name: "BillingPayment")
  paymentTransactionId String?      @unique

  transactions  Transaction[]            @relation(name: "BillingTransactions")
  installments  TransactionInstallment[]
  statusHistory CardBillingHistory[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@unique([cardId, periodStart])
  @@index([cardId])
  @@index([paymentDate])
}

model CardBillingHistory {
  id        String            @id @default(uuid())
  status    CardBillingStatus
  changedAt DateTime          @default(now())

  cardBilling   CardBilling @relation(fields: [cardBillingId], references: [id], onDelete: Cascade)
  cardBillingId String

  @@index([cardBillingId])
  @@index([changedAt])
}

model AuthUserProvider {
  id String @id @default(uuid())

  providerName AuthProviderName
  providerId   String

  user   User   @relation(fields: [userId], references: [id])
  userId String

  createdAt DateTime @default(now())
  updatedAt DateTime @default(now())

  @@unique([providerName, providerId, userId])
}

model Investment {
  id              String    @id @default(uuid())
  amount          Float
  correctedAmount Float?
  taxedAmount     Float?
  startDate       DateTime
  duration        Int?
  finishedAt      DateTime?
  lastCorrectedAt DateTime?

  status InvestmentStatus @default(OPEN)

  type           InvestmentType @default(FIXED_INCOME)
  fixedRate      Float?
  brokerageFee   Float?
  maturityDate   DateTime?

  regimeName       Regime
  regimePercentage Float? @default(100)

  institutionLink   InstitutionLink? @relation(fields: [institutionLinkId], references: [id])
  institutionLinkId String

  transactions InvestmentTransaction[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model InvestmentTransaction {
  id     String                    @id @default(uuid())
  role   InvestmentTransactionRole
  amount Decimal

  investment   Investment @relation(fields: [investmentId], references: [id], onDelete: Cascade)
  investmentId String

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([investmentId])
}

model Transaction {
  id             String            @id @default(uuid())
  description    String
  amount         Decimal
  date           DateTime
  status         TransactionStatus
  type           TransactionType
  paymentMethod  PaymentMethod?
  paymentEnabled Boolean           @default(true)
  paymentLimit   DateTime?

  // Categoria da transação (pode ser sugerida por IA)
  category           TransactionCategory?
  categoryConfidence Float? // 0-1: confiança da sugestão de IA

  sourceAccount   Account? @relation(fields: [sourceAccountId], references: [id], onDelete: Cascade, name: "SourceAccount")
  sourceAccountId String?

  destinyAccount   Account? @relation(fields: [destinyAccountId], references: [id], onDelete: Cascade, name: "DestinyAccount")
  destinyAccountId String?

  sourceCard   Card?   @relation(fields: [sourceCardId], references: [id], name: "SourceCard")
  sourceCardId String?

  billingPayment CardBilling? @relation(name: "BillingPayment")

  cardBilling   CardBilling? @relation(fields: [cardBillingId], references: [id], onDelete: SetNull, name: "BillingTransactions")
  cardBillingId String?

  recurringTransaction   RecurringTransaction? @relation(fields: [recurringTransactionId], references: [id], onDelete: SetNull)
  recurringTransactionId String?

  installments TransactionInstallment[]

  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)
  userId String

  deletedAt DateTime?

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([deletedAt])
}

model TransactionInstallment {
  id String @id @default(uuid())

  installmentNumber Int
  amount            Decimal

  transaction   Transaction @relation(fields: [transactionId], references: [id], onDelete: Cascade)
  transactionId String

  cardBilling   CardBilling? @relation(fields: [cardBillingId], references: [id], onDelete: SetNull)
  cardBillingId String?

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model RecurringTransaction {
  id              String          @id @default(uuid())
  description     String
  estimatedAmount Decimal
  type            TransactionType
  paymentMethod   PaymentMethod?

  frequency   RecurrenceFrequency
  dayMode     DayMode             @default(SPECIFIC_DAY)
  dayOfMonth  Int? // 1-28 for SPECIFIC_DAY mode
  dayOfWeek   Int? // 0-6 (Sun-Sat) for WEEKLY/BI_WEEKLY
  weekOfMonth Int? // 1-5 for NTH_WEEKDAY mode
  monthOfYear Int? // For YEARLY: 1-12, null for other frequencies

  startDate DateTime
  endDate   DateTime? // null = generate up to practical limit (2 years)
  isActive  Boolean   @default(true)

  // Tipo de recorrência
  recurrenceType    RecurrenceType @default(PERIODIC)
  totalInstallments Int? // Total de parcelas para INSTALLMENT
  repeatCount       Int? // Número total de repetições para PERIODIC

  sourceAccount   Account? @relation(fields: [sourceAccountId], references: [id], onDelete: Cascade, name: "RecurringSource")
  sourceAccountId String?

  destinyAccount   Account? @relation(fields: [destinyAccountId], references: [id], onDelete: Cascade, name: "RecurringDestiny")
  destinyAccountId String?

  sourceCard   Card?   @relation(fields: [sourceCardId], references: [id], name: "RecurringSourceCard")
  sourceCardId String?

  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)
  userId String

  transactions Transaction[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([userId])
  @@index([isActive])
}

enum InstitutionType {
  CHECKING
  INVESTMENT
  CARD
}

enum CardType {
  CREDIT
  DEBIT
}

enum CardBillingStatus {
  PENDING
  CLOSED
  PAID
  OVERDUE
  COMPLETED
}

enum PaymentMethod {
  CASH
  PIX
  CREDIT_CARD
  DEBIT_CARD
  BOLETO
}

enum InvestmentStatus {
  OPEN
  CLOSED
}

enum AuthProviderName {
  GOOGLE
}

enum Role {
  ADMIN
  USER
}

enum Regime {
  CDI
  POUPANCA
  SELIC
  IPCA
  PREFIXED
}

enum InvestmentTransactionRole {
  FUNDING
  REDEMPTION
  INCOME
  FEE
}

enum InvestmentType {
  FIXED_INCOME
  TREASURY
  SAVINGS
  VARIABLE_INCOME
}

enum TransactionCategory {
  FOOD_DINING // Alimentação
  TRANSPORT // Transporte
  HOUSING // Moradia
  UTILITIES // Contas (luz, água, internet)
  HEALTHCARE // Saúde
  ENTERTAINMENT // Lazer
  SHOPPING // Compras
  EDUCATION // Educação
  TRAVEL // Viagens
  SALARY // Salário
  INVESTMENT_INCOME // Rendimentos
  TRANSFER // Transferências
  OTHER // Outros
}

enum TransactionStatus {
  PLANNED
  COMPLETED
  OVERDUE
}

enum TransactionType {
  INCOME
  EXPENSE
  BETWEEN_ACCOUNTS
}

enum RecurrenceFrequency {
  WEEKLY
  BI_WEEKLY
  MONTHLY
  YEARLY
}

enum DayMode {
  SPECIFIC_DAY // Use dayOfMonth or dayOfWeek as-is
  LAST_DAY // Last day of period (month/year)
  LAST_BUSINESS_DAY // Last business day (excluding weekends)
  FIRST_BUSINESS_DAY // First business day
  NTH_WEEKDAY // e.g., "2nd Tuesday of month"
}

enum RecurrenceType {
  PERIODIC // Recorrência baseada em período (infinita até endDate)
  INSTALLMENT // Parcelamento com número fixo de parcelas
}
