//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  email String [unique, not null]
  password String
  name String [not null]
  role Role [not null]
  authUserProviders AuthUserProvider [not null]
  transactions Transaction [not null]
  recurringTransactions RecurringTransaction [not null]
  institutionLinks InstitutionLink [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Institution {
  id String [pk]
  code String [not null]
  name String [not null]
  logoUrl String
  color String
  types InstitutionType[] [not null]
  institutionLinks InstitutionLink [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table InstitutionLink {
  id String [pk]
  institution Institution [not null]
  institutionId String [not null]
  user User [not null]
  userId String [not null]
  account Account
  cards Card [not null]
  investments Investment [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]

  indexes {
    (institutionId, userId) [unique]
  }
}

Table Account {
  id String [pk]
  name String [not null]
  initialBalance Decimal [not null, default: 0]
  startDate DateTime [not null]
  description String
  isActive Boolean [not null, default: true]
  institutionLink InstitutionLink [not null]
  institutionLinkId String [unique, not null]
  sourceTransactions Transaction [not null]
  destinyTransactions Transaction [not null]
  sourceRecurringTransactions RecurringTransaction [not null]
  destinyRecurringTransactions RecurringTransaction [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Card {
  id String [pk]
  name String [not null]
  lastFourDigits String
  billingCycleDay Int [not null]
  billingPaymentDay Int [not null]
  type CardType [not null]
  defaultLimit Decimal [not null]
  institutionLink InstitutionLink [not null]
  institutionLinkId String [not null]
  billings CardBilling [not null]
  sourceTransactions Transaction [not null]
  sourceRecurringTransactions RecurringTransaction [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table CardBilling {
  id String [pk]
  periodStart DateTime [not null]
  periodEnd DateTime
  paymentDate DateTime
  limit Decimal [not null]
  status CardBillingStatus [not null]
  card Card [not null]
  cardId String [not null]
  paymentTransaction Transaction
  paymentTransactionId String [unique]
  transactions Transaction [not null]
  installments TransactionInstallment [not null]
  statusHistory CardBillingHistory [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]

  indexes {
    (cardId, periodStart) [unique]
  }
}

Table CardBillingHistory {
  id String [pk]
  status CardBillingStatus [not null]
  changedAt DateTime [default: `now()`, not null]
  cardBilling CardBilling [not null]
  cardBillingId String [not null]
}

Table AuthUserProvider {
  id String [pk]
  providerName AuthProviderName [not null]
  providerId String [not null]
  user User [not null]
  userId String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]

  indexes {
    (providerName, providerId, userId) [unique]
  }
}

Table Investment {
  id String [pk]
  amount Float [not null]
  correctedAmount Float
  taxedAmount Float
  startDate DateTime [not null]
  duration Int
  finishedAt DateTime
  lastCorrectedAt DateTime
  status InvestmentStatus [not null, default: 'OPEN']
  type InvestmentType [not null, default: 'FIXED_INCOME']
  fixedRate Float
  brokerageFee Float
  maturityDate DateTime
  regimeName Regime [not null]
  regimePercentage Float [default: 100]
  institutionLink InstitutionLink
  institutionLinkId String [not null]
  transactions InvestmentTransaction [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table InvestmentTransaction {
  id String [pk]
  role InvestmentTransactionRole [not null]
  amount Decimal [not null]
  investment Investment [not null]
  investmentId String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Transaction {
  id String [pk]
  description String [not null]
  amount Decimal [not null]
  date DateTime [not null]
  status TransactionStatus [not null]
  type TransactionType [not null]
  paymentMethod PaymentMethod
  paymentEnabled Boolean [not null, default: true]
  paymentLimit DateTime
  category TransactionCategory
  categoryConfidence Float
  sourceAccount Account
  sourceAccountId String
  destinyAccount Account
  destinyAccountId String
  sourceCard Card
  sourceCardId String
  billingPayment CardBilling
  cardBilling CardBilling
  cardBillingId String
  recurringTransaction RecurringTransaction
  recurringTransactionId String
  installments TransactionInstallment [not null]
  user User [not null]
  userId String [not null]
  deletedAt DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table TransactionInstallment {
  id String [pk]
  installmentNumber Int [not null]
  amount Decimal [not null]
  transaction Transaction [not null]
  transactionId String [not null]
  cardBilling CardBilling
  cardBillingId String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table RecurringTransaction {
  id String [pk]
  description String [not null]
  estimatedAmount Decimal [not null]
  type TransactionType [not null]
  paymentMethod PaymentMethod
  frequency RecurrenceFrequency [not null]
  dayMode DayMode [not null, default: 'SPECIFIC_DAY']
  dayOfMonth Int
  dayOfWeek Int
  weekOfMonth Int
  monthOfYear Int
  startDate DateTime [not null]
  endDate DateTime
  isActive Boolean [not null, default: true]
  recurrenceType RecurrenceType [not null, default: 'PERIODIC']
  totalInstallments Int
  repeatCount Int
  sourceAccount Account
  sourceAccountId String
  destinyAccount Account
  destinyAccountId String
  sourceCard Card
  sourceCardId String
  user User [not null]
  userId String [not null]
  transactions Transaction [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Enum InstitutionType {
  CHECKING
  INVESTMENT
  CARD
}

Enum CardType {
  CREDIT
  DEBIT
}

Enum CardBillingStatus {
  FUTURE
  PENDING
  CLOSED
  PAID
  OVERDUE
  COMPLETED
}

Enum PaymentMethod {
  CASH
  PIX
  CREDIT_CARD
  DEBIT_CARD
  BOLETO
}

Enum InvestmentStatus {
  OPEN
  CLOSED
}

Enum AuthProviderName {
  GOOGLE
}

Enum Role {
  ADMIN
  USER
}

Enum Regime {
  CDI
  POUPANCA
  SELIC
  IPCA
  PREFIXED
}

Enum InvestmentTransactionRole {
  FUNDING
  REDEMPTION
  INCOME
  FEE
}

Enum InvestmentType {
  FIXED_INCOME
  TREASURY
  SAVINGS
  VARIABLE_INCOME
}

Enum TransactionCategory {
  FOOD_DINING
  TRANSPORT
  HOUSING
  UTILITIES
  HEALTHCARE
  ENTERTAINMENT
  SHOPPING
  EDUCATION
  TRAVEL
  SALARY
  INVESTMENT_INCOME
  TRANSFER
  OTHER
}

Enum TransactionStatus {
  PLANNED
  COMPLETED
  OVERDUE
}

Enum TransactionType {
  INCOME
  EXPENSE
  BETWEEN_ACCOUNTS
}

Enum RecurrenceFrequency {
  WEEKLY
  BI_WEEKLY
  MONTHLY
  YEARLY
}

Enum DayMode {
  SPECIFIC_DAY
  LAST_DAY
  LAST_BUSINESS_DAY
  FIRST_BUSINESS_DAY
  NTH_WEEKDAY
}

Enum RecurrenceType {
  PERIODIC
  INSTALLMENT
}

Ref: InstitutionLink.institutionId > Institution.id [delete: Cascade]

Ref: InstitutionLink.userId > User.id [delete: Cascade]

Ref: Account.institutionLinkId - InstitutionLink.id [delete: Cascade]

Ref: Card.institutionLinkId > InstitutionLink.id [delete: Cascade]

Ref: CardBilling.cardId > Card.id [delete: Cascade]

Ref: CardBilling.paymentTransactionId - Transaction.id

Ref: CardBillingHistory.cardBillingId > CardBilling.id [delete: Cascade]

Ref: AuthUserProvider.userId > User.id

Ref: Investment.institutionLinkId > InstitutionLink.id

Ref: InvestmentTransaction.investmentId > Investment.id [delete: Cascade]

Ref: Transaction.sourceAccountId > Account.id [delete: Cascade]

Ref: Transaction.destinyAccountId > Account.id [delete: Cascade]

Ref: Transaction.sourceCardId > Card.id

Ref: Transaction.cardBillingId - CardBilling.id

Ref: Transaction.recurringTransactionId > RecurringTransaction.id [delete: Set Null]

Ref: Transaction.userId > User.id [delete: Cascade]

Ref: TransactionInstallment.transactionId > Transaction.id [delete: Cascade]

Ref: TransactionInstallment.cardBillingId > CardBilling.id [delete: Set Null]

Ref: RecurringTransaction.sourceAccountId > Account.id [delete: Cascade]

Ref: RecurringTransaction.destinyAccountId > Account.id [delete: Cascade]

Ref: RecurringTransaction.sourceCardId > Card.id

Ref: RecurringTransaction.userId > User.id [delete: Cascade]